--- a/package.json
+++ b/package.json
@@ -11,10 +11,30 @@
   "dependencies": {
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7",
+    "react-scroll-parallax": "^3.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "autoprefixer": "^10.4.10",
+    "babel-plugin-styled-components": "^2.0.7",
+    "babel-plugin-twin": "^1.0.2",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "twin.macro": "^2.8.2",
+    "typescript": "^4.8.3"
+  },
+  "babelMacros": {
+    "twin": {
+      "styled": {
+        "import": "default",
+        "from": "styled-components"
+      }
+    }
   }
 }
