--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0",
     "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.3.1",
     "styled-components": "^5.3.5"
